# notification-app

./: README.md
.github/workflows/: build-notification-app.yml
notification-app/: package-lock.json  package.json  vite.config.ts
notification-app/src/: App.tsx
notification-app/src-tauri/: Cargo.toml  tauri.conf.json
notification-app/src-tauri/capabilities/: default.json
notification-app/src-tauri/src/: commands.rs  main.rs  sse_client.rs  window_manager.rs
notification-app/src/components/: AnimationView.tsx  MeditationAnimation.tsx  NotificationPopup.tsx
notification-app/src/hooks/: useSSE.ts
notification-app/src/styles/: App.css  KeepCalmAnimation.css  MeditationAnimation.css
notification-app/src/types/: index.ts
notification-server/: Cargo.toml
notification-server/src/: main.rs  models.rs  services.rs
