[package]
name = "notification-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "notification-all", "system-tray", "notification", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures = "0.3"
eventsource-stream = "0.2"
anyhow = "1.0"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
