[package]
name = "notification-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
eventsource-stream = "0.2"
anyhow = "1.0"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
image = "0.25"
